src/objects/Zuora__SubscriptionProductChargeHistory__c.object
<CustomObject>
    <fields>
        <fullName>Zuora__AccountingCode__c</fullName>
        <description>The accounting code for this charge.</description>
        <label>Accounting Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__ApplyDiscountTo__c</fullName>
        <description>Specifies the type of charges a specific discount applies to.</description>
        <label>Apply Discount To</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Null</fullName>
                </value>
                <value>
                    <fullName>One Time</fullName>
                </value>
                <value>
                    <fullName>One Time Recurring</fullName>
                </value>
                <value>
                    <fullName>One Time Recurring Usage</fullName>
                </value>
                <value>
                    <fullName>One Time Usage</fullName>
                </value>
                <value>
                    <fullName>Recurring</fullName>
                </value>
                <value>
                    <fullName>Recurring Usage</fullName>
                </value>
                <value>
                    <fullName>Usage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Zuora__BillCycleDay__c</fullName>
        <description>Indicates the charge&apos;s billing cycle day (BCD), which is when bill runs generate invoices for charges associated with the product rate plan charge or the account.</description>
        <label>Bill Cycle Day</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zuora__BillCycleType__c</fullName>
        <description>Specifies how to determine the billing day for the charge.</description>
        <label>Bill Cycle Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__BillingPeriodAlignment__c</fullName>
        <description>Aligns charges within the same subscription if multiple charges begin on different dates.</description>
        <label>Billing Period Alignment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__BillingPeriod__c</fullName>
        <description>e.g. monthly, quarterly, annually</description>
        <label>Period</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__BillingTiming__c</fullName>
        <label>Billing Timing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Advance</fullName>
                </value>
                <value>
                    <fullName>In Arrears</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Zuora__ChargeNumber__c</fullName>
        <description>The charge number for this charge.</description>
        <label>Charge Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__ChargedThroughDate__c</fullName>
        <description>The date through which a customer has been billed for the charge.</description>
        <label>Charged Through Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Zuora__CreatedDate__c</fullName>
        <description>The date when the Subscription Product &amp; Charge was created in the Zuora system.</description>
        <label>Zuora Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Zuora__DMRC__c</fullName>
        <description>A delta monthly recurring charge is the change in monthly recurring revenue caused by an amendment or a new subscription.</description>
        <label>DMRC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zuora__DTCV__c</fullName>
        <description>After an Amendment, the change in the total contract value (TCV) amount for this charge, compared with its previous value.</description>
        <label>DTCV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zuora__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Zuora__DiscountLevel__c</fullName>
        <description>Specifies if the discount applies to just the product rate plan, the entire subscription, or to any activity in the account.</description>
        <label>Discount Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__EffectiveEndDate__c</fullName>
        <label>Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Zuora__EffectiveStartDate__c</fullName>
        <label>Effective Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Zuora__EndDateCondition__c</fullName>
        <label>End Date Condition</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Subscription End Date</fullName>
                </value>
                <value>
                    <fullName>One Time</fullName>
                </value>
                <value>
                    <fullName>Fixed Period</fullName>
                </value>
                <value>
                    <fullName>Specific End Date</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Zuora__External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field holds the Zuora object ID, and is used as external ID for data synchronization between Salesforce and Zuora.</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Zuora__IsLastSegment__c</fullName>
        <description>Indicates if the segment of the rate plan charge is the most recent segment.</description>
        <label>Is Last Segment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__ListPriceBase__c</fullName>
        <label>List Price Base</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Per Month</fullName>
                </value>
                <value>
                    <fullName>Per Billing Period</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Zuora__Model__c</fullName>
        <label>Model</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__MonthlyRecurringRevenue__c</fullName>
        <label>Monthly Recurring Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Zuora__NumberOfPeriods__c</fullName>
        <description>Specifies the number of periods to use when calculating charges in an overage smoothing charge model.</description>
        <label>Number Of Periods</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zuora__OriginalId__c</fullName>
        <description>The original ID of the rate plan charge.</description>
        <label>Original Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__OverageCalculationOption__c</fullName>
        <description>Determines when to calculate overage charges.</description>
        <label>Overage Calculation Option</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__OverageUnusedUnitsCreditOption__c</fullName>
        <description>Determines whether to credit the customer with unused units of usage.</description>
        <label>Overage Unused Units Credit Option</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__PriceChangeOption__c</fullName>
        <description>Applies an automatic price change when a termed subscription is renewed.</description>
        <label>Price Change Option</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__PriceIncreasePercentage__c</fullName>
        <description>Specifies the percentage to increase or decrease the price of renewed subscriptions. Use this field if the ProductRatePlanCharge.PriceChangeOption value is set to SpecificPercentageValue.</description>
        <label>Price Increase Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zuora__PriceTable__c</fullName>
        <label>Price Table</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Zuora__ProcessedThroughDate__c</fullName>
        <description>The date until when charges have been processed. When billing in arrears, such as usage, this field value is the the same as the ChargedThroughDate value. This date is the earliest date when a charge can be amended.</description>
        <label>Processed Through Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Zuora__ProductRatePlanChargeId__c</fullName>
        <description>The product rate plan charge this charge is based on</description>
        <label>Product Rate Plan Charge Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zuora__RatePlanDescription__c</fullName>
        <label>Rate Plan Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Zuora__RatePlanId__c</fullName>
        <description>This field holds rateplan id.</description>
        <externalId>true</externalId>
        <label>RatePlan Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__RevRecCode__c</fullName>
        <description>Associates this product rate plan charge with a specific revenue recognition code.</description>
        <label>Rev Rec Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__RevRecTriggerCondition__c</fullName>
        <description>Specifies when revenue recognition begins.</description>
        <label>Rev Rec Trigger Condition</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__Segment__c</fullName>
        <description>The identifying number of the subscription rate plan segment. Segments are numbered sequentially, starting with 1.</description>
        <label>Segment</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zuora__SpecificBillingPeriod__c</fullName>
        <description>Customizes the number of month for the charges billing period. This field is required if you set the value of the BillingPeriod field to Specific Months.</description>
        <label>Specific Billing Period</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zuora__SpecificEndDate__c</fullName>
        <label>Specific End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Zuora__SubscriptionRatePlanChargeName__c</fullName>
        <label>Subscription Rate Plan Charge Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__SubscriptionRatePlan__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <label>Subscription Rate Plan</label>
        <referenceTo>Zuora__SubscriptionRatePlanHistory__c</referenceTo>
        <relationshipLabel>Subscription Product &amp; Charges History</relationshipLabel>
        <relationshipName>Subscription_Product_Charges_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Zuora__TotalContractValue__c</fullName>
        <label>Total Contract Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Zuora__TriggerDate__c</fullName>
        <description>The date when the charge becomes effective, and billing begins. This field is required if the TriggerEvent field value is SpecificDate.</description>
        <label>Trigger Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Zuora__TriggerEvent__c</fullName>
        <description>Specifies when to start billing the customer for the charge.</description>
        <label>Trigger Event</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Upon Contract Effective</fullName>
                </value>
                <value>
                    <fullName>Upon Service Activation</fullName>
                </value>
                <value>
                    <fullName>Upon Customer Acceptance</fullName>
                </value>
                <value>
                    <fullName>Upon a Specific Date</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Zuora__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>One-Time</fullName>
                </value>
                <value>
                    <fullName>Recurring</fullName>
                </value>
                <value>
                    <fullName>Usage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Zuora__UOM__c</fullName>
        <description>Unit of measure -- basis for pricing (e.g. licenses, seats, users, etc.)</description>
        <label>UOM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__UpToPeriodsType__c</fullName>
        <label>Up To Periods Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Billing Periods</fullName>
                </value>
                <value>
                    <fullName>Days</fullName>
                </value>
                <value>
                    <fullName>Weeks</fullName>
                </value>
                <value>
                    <fullName>Months</fullName>
                </value>
                <value>
                    <fullName>Years</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Zuora__UpdatedDate__c</fullName>
        <description>The date when the Subscription Product &amp; Charge was updated in the Zuora system.</description>
        <label>Zuora Updated Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Zuora__Upto_How_Many_Periods__c</fullName>
        <description>Determines the period when discount charge model charge is added.</description>
        <label>Up To How Many Periods</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zuora__Version__c</fullName>
        <description>The version of the rate plan charge. Each time a charge is amended, Zuora creates a new version of the rate plan charge.</description>
        <label>Version</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zuora__WeeklyBillCycleDay__c</fullName>
        <description>Specifies which day of the week as the bill cycle day (BCD) for the charge.</description>
        <label>Weekly Bill Cycle Day</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Subscription Product &amp; Charge History</label>
    <listViews>
        <fullName>Zuora__All</fullName>
        <columns>NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Zuora__External_Id__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Subscription Charge Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Subscription Product &amp; Charges History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>